--- a/uri2602/src/main/resources/application-dev.properties
+++ b/uri2602/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/uri2602
-spring.datasource.username=beecrowd
+spring.datasource.url=jdbc:postgresql://localhost:5432/bee2602
+spring.datasource.username=postgres
 spring.datasource.password=1234567
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
